helm/counter-chart/template/Ingress-controller.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: nginx-ingress-controller
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      name: nginx-ingress
  template: 
    metadata: 
      labels: 
        name: nginx-ingress
    spec: 
      containers: 
        - 
          args: 
            - /nginx-ingress-controller
            - "--configmap=$(POD_NAMESPACE) /nginx-configuration"
          image: quay.io/kubernetes-ingress-controller/nginx-ingress
          name: nginx-ingress-controller
          ports: 
            - 
              containerPort: 80
              name: http
            - 
              containerPort: 443
              name: https
