helm/counter-chart/template/green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 1
  minReadySeconds: 10
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
        name: app
        version: "1.1"
    spec:
      containers:
        - name: app
          image: "counterapp:1.0"
          resources:
            limits:
              memory: "2048Mi"
              cpu: "300m"
          ports:
            - containerPort: 8080
              name: application
            - containerPort: 5000
              name: jmx
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            failureThreshold: 3
            initialDelaySeconds: 480
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 480
            periodSeconds: 10
