helm/counter-chart/template/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: app
  labels: 
    name: app
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector: 
    name: app
    version: "1.0"
  type: LoadBalancer
